# TEMmy

./: .gitignore  README.md  index.html  mypy.ini  package.py  temmy.org
SerialEM_Scripts/: 24-CalibrateAndRecapturePy.py  25-TakeSnapshot.py  Util-0Vars-TEM2.py  Util-1Vars.py  Util-ClearDataDrive.py  Util-CopyDir.py  Util-SampleInfo.py  Util-TakeSnapshot.py  Util-ThreeChoiceBox.py  Util-ZATutorial.py  Util-ZBTutorialShared.py
ahk/: .gitignore  CaptureScreen().ahk  book-thief.ahk  number-watch.ahk  tem.ahk  util.ahk
bob/: .gitignore  Build1-config.yaml  Cargo.toml  RC2-config.yaml  README.md  deploy-temp.sh  deploy.cmd  deploy.sh
bob-web-ui/: README.md  app.py  rc3.py  stop.cmd  volume.py
bob/src/: commands.rs  config.rs  core_builds.rs  errors.rs  main.rs  rc3_builds.rs  rito.rs  robocopy.rs  run.rs  volume.rs
boilerplate/: main.js
coach/: README.md  build.sh  help.ink  index.html  protocol.ink  temmy.js  temmy.org
coach2/: rc3.ink
ink/: temmy.org
macros/: 00-TimedLowMagCook.txt  01-HighMagCook.txt  02-CalibrateAndRecapture.txt  03-WaitForStableFilament.txt  04-Notifications.txt  05-ScopeUtil-TEM1.txt  05-ScopeUtil-TEM2.txt  06-CopyFunctions.txt  07-StringTools.txt  08-Images.txt  08-Snapshot.txt  09-Captures.txt  10-BeamBlank.txt  11-AutoWarmUpFilament.txt  12-SaveRC3Snapshot.txt  12-TurnOnFilament.txt  13-TurnOffFilament.txt  14-NotificationsV2.txt  14-ThreeChoiceBox.txt  14-TimedLowMagCook.py  14-TurnOffFilament.txt  15-7MinuteLowMagCook.py  16-ChooseTimeLowMagCook.py  16-NotificationsV2.txt  17-NotificationsV2.txt  18-Notifications.py  20-Snapshot.py  (+48 more)
(+88 files in other folders)
