[package]
name = "bob"
version = "0.0.1"
authors = ["Nat Quayle Nelson <natquaylenelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13.4"
humantime = "2.1.0"
rustyline = "8.0.0"
yaml-rust = "0.4"